[package]
name = "argo-teltonika"
version = "0.1.0"
edition = "2021"
description = "Pluggable teltonika server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["dep:tokio", "nom-teltonika/tokio", "dep:async-trait"]

[dependencies]
async-trait = {version = "0.1.73", optional = true}
log = { version = "0.4.19", features = ["std"] }
nom = "7.1.3"
# nom-teltonika = { path = "../nom-teltonika" }
nom-teltonika = "0.1.4"
tokio = { version = "^1.29.0", default-features = false, optional = true, features = [
    "io-util",
    "net",
    "rt",
    "rt-multi-thread",
    "macros"
] }


[dev-dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
