[package]
name = "argo-teltonika"
version = "0.1.0"
edition = "2021"
description = "Pluggable teltonika server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
nom = "7.1"
# nom-teltonika = { path = "../nom-teltonika" }
nom-teltonika = "0.1"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.10"
